================================================================================
Change history for ph-scale
================================================================================

DESIGN ISSUES

HIGH PRIORITY:
- make alignment of pH slider ticks and bar graph ticks independent of font size of things above bar graph
- make H3O and OH bars interactive
- how to handle overlapping of bar drag handles and zoom buttons?

MEDIUM PRIORITY:

LOW PRIORITY:
- delete MoleculeCountAlternateNode and associated developer controls
- break up Liquid into a few smaller classes (separate pH model, fill/drain mechanism, etc) 
- generalize layout code
- can't align baselines of text and numbers drawn using HTMLNode
- pH text field isn't fully selected when it gains focus or when you double-click in it, selection is generally flakey (PSwing issue?)

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- add cursors to all things that are interactive
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc
- organize imports


DONE:
7/13/08 - major reorganization and rename of packages, done in phases to workaround Subversive issues
7/13/08 - move zoom controls to their own class
7/13/08 - clean up BarGraphNode, remove some duplicate and unnecessary code
7/13/08 - refactor graph bars into their own class, BarNode
7/13/08 - javadoc BarGraphNode and BarDragHandleNode
7/13/08 - implement model-view transform for log scale bar graph
7/13/08 - implement model-view transform for linear scale bar graph
7/13/08 - add x spacing between beaker ticks and labels
7/13/08 - make beaker's minor ticks noticeably short than major ticks
7/13/08 - move bar drag handles to top-left edge of bars so that they don't obscure bar values
7/13/08 - implement bar updaters in terms of BarGraphNode.calculateBarLength
7/12/08 - rename "soda" to "soda pop"