@@ -5,8 +5,8 @@ Change history for ph-scale
 DESIGN ISSUES
 
 HIGH PRIORITY:
+- constrain dragging of bars so that pH stays in range -1 to 15
 - make alignment of pH slider ticks and bar graph ticks independent of font size of things above bar graph
-- make H3O and OH bars interactive
 - how to handle overlapping of bar drag handles and zoom buttons?
 
 MEDIUM PRIORITY:
@@ -33,6 +33,7 @@ CLEANUP:
 
 
 DONE:
+7/13/08 - add drag handlers for bars, update model as bars are dragged
 7/13/08 - major reorganization and rename of packages, done in phases to workaround Subversive issues
 7/13/08 - move zoom controls to their own class
 7/13/08 - clean up BarGraphNode, remove some duplicate and unnecessary code
